--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "cypress open"
+    "test": "cypress run --browser chrome --headed"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,9 @@
     "@badeball/cypress-cucumber-preprocessor": "^20.0.6",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.1",
     "cypress": "^13.11.0",
-    "esbuild": "^0.21.4"
+    "cypress-mochawesome-reporter": "^3.8.2",
+    "esbuild": "^0.21.4",
+    "mochawesome": "^7.1.3",
+    "typescript": "^5.4.5"
   }
 }
