--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@badeball/cypress-cucumber-preprocessor": "^20.0.6",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.1",
     "cypress": "^13.11.0",
+    "cypress-iframe": "^1.0.1",
     "cypress-mochawesome-reporter": "^3.8.2",
     "esbuild": "^0.21.4",
     "mochawesome": "^7.1.3",
