--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "cypress run --browser chrome --headed"
+    "test": "npx cypress run --browser chrome --headed",
+    "reportBuild": "marge cypress/report/results/mochawesome.json --reportDir ./ --inline -p test-Report",
+    "openReport": "npx ts-node ./index.ts",
+    "cy-test": "npm test & npm run openReport"
   },
   "repository": {
     "type": "git",
@@ -19,11 +22,25 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^20.0.6",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.1",
+    "@shelex/cypress-allure-plugin": "^2.40.2",
+    "@types/node": "^20.14.2",
+    "cucumber-html-reporter": "^7.1.1",
     "cypress": "^13.11.0",
-    "cypress-iframe": "^1.0.1",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "cypress-mochawesome-reporter": "^3.8.2",
+    "cypress-multi-reporters": "^1.6.4",
     "esbuild": "^0.21.4",
     "mochawesome": "^7.1.3",
+    "multiple-cucumber-html-reporter": "^3.6.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": false,
+    "stepDefinitions": "cypress/e2e/stepDefinitions/*.ts",
+    "json": {
+      "enabled": true,
+      "output": "cypress/reports/jsonReport/report.json"
+    } 
   }
 }
